@@ -181,5 +181,3 @@ volScalarField infiltration
     mesh,
     infiltrationScalar
 );
-
-scalar hIntegrated = fvc::domainIntegrate(hwater).value();
